Fix z-index issues with Sudoku app

--- a/src/wwwroot/css/sudoku.css
+++ b/src/wwwroot/css/sudoku.css
@@ -97,6 +97,8 @@
     }
 
     &::before {
+        z-index: 1;
+
         content: "";
         position: absolute;
 
@@ -399,7 +401,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /*z-index: 1;*/
+    z-index: 2;
 }
 
 .modal--box {
